--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
                     <div><a href="https://www.linkedin.com/in/muskan-verma-919853213">linkedin</a></div>                
                      </div>
                 <div class="buttons">
-                    <a href="/My resume.pdf" target="_blank">
+                    <a href="My resume.pdf" target="_blank">
                         <!-- new tab me cv file kholne k leay target is _blank kia h -->
                     <button class="btn">Download CV</button></a>
-                    <a href="/contact.html"><button class="btn">Contact Me</button></a>
+                    <a href="contact.html"><button class="btn">Contact Me</button></a>
                 </div>
              
             </div>
